Fixed issue where whitespace was getting added to the end of lines in code blocks

--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -175,6 +175,7 @@ samp {
     background-color: rgb(240, 240, 240);
     font-family: "Inconsolata", monospace, serif;
     font-size: 1em;
+    white-space: pre-line;
     overflow-x: auto;
 }
 
